fix: update dark mode background color

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,7 +18,8 @@
 }
 
 .dark {
-  --background: oklch(0.21 0.006 285.885);
+  /* --background: oklch(0.21 0.006 285.885); */
+  --background: oklch(0.141 0.005 285.823);
   --foreground: oklch(0.985 0 0);
   --primary: oklch(0.4 0.2 220);
   --primary-foreground: oklch(0.971 0.013 17.38);
